# cpp_restapi

./: CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  aconnection.hpp  annotated.html  classGitHub_1_1CurlBackend_1_1Api-members.html  classGitHub_1_1CurlBackend_1_1Api.html  classGitHub_1_1IApi-members.html  classGitHub_1_1IApi.html  classGitHub_1_1QtBackend_1_1Api-members.html  classGitHub_1_1QtBackend_1_1Api.html  classGitHub_1_1Request-members.html  classGitHub_1_1Request.html  classes.html  connection.cpp  connection.hpp  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_2b590c760c68083bf3992f50fd0724d5.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  github__api__curl_8hpp.html  github__api__curl_8hpp_source.html  github__api__qt_8hpp.html  github__api__qt_8hpp_source.html  github_api.cpp  github_api.hpp  hierarchy.html  iconnection.cpp  iconnection.hpp  iconnection_8hpp.html  iconnection_8hpp_source.html  igithub__api_8hpp.html  (+15 more)
.github/: dependabot.yml  generate-docs-index.sh
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  async_cpp-httplib_example.cpp  async_curl_example.cpp  async_qt_example.cpp  bare_cpp-httplib_connection_example.cpp  bare_curl_connection_example.cpp  bare_qt_connection_example.cpp  coroutine_cpp-httplib_example.cpp  coroutine_curl_example.cpp  coroutine_qt_example.cpp  cpp-httplib_async_example.cpp  cpp-httplib_coroutine_example.cpp  cpp-httplib_sse_example.cpp  curl_async_example.cpp  curl_coroutine_example.cpp  curl_example.cpp  curl_sse_example.cpp  deprecated_qt_example.cpp  github_cpp-httplib_example.cpp  github_curl_example.cpp  github_qt_example.cpp  qt_coroutine_example.cpp  qt_example.cpp  qt_sse_example.cpp  sse_cpp-httplib_example.cpp  sse_curl_example.cpp  sse_qt_example.cpp
master/: annotated.html  annotated_dup.js  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_1dfdaf2a20c264418d0279052f697d7b.js  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  index.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  pages.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_3.js
src/: CMakeLists.txt  base_connection.cpp  base_connection.hpp  connection.cpp  connection.hpp  github_api.cpp  header_utils.cpp  header_utils.hpp  link_header_pagination_strategy.cpp  request.cpp  sse_parser.cpp  threaded_connection.cpp
src/cpp-httplib_backend/: CMakeLists.txt  connection.cpp  cpp-httplib_sse_connection.hpp  create_connection.cpp  sse_connection.cpp
src/curl_backend/: CMakeLists.txt  connection.cpp  connection.hpp  create_connection.cpp  curl_sse_connection.hpp  github_api.cpp  sse_connection.cpp
src/json_pagination/: CMakeLists.txt  link_header_pagination_strategy.cpp
src/qt_backend/: CMakeLists.txt  connection.cpp  connection.hpp  create_connection.cpp  github_api.cpp  qt_sse_connection.hpp  sse_connection.cpp
src/services/github/: CMakeLists.txt  github_api_base.cpp  link_header_pagination_strategy.cpp  request.cpp
tests/: CMakeLists.txt  api_tests.cpp  async_fetch_tests.cpp  base_connection_tests.cpp  connection_tests.cpp  coroutine_tests.cpp  github_request_tests.cpp  github_server_mock.hpp  main.cpp  pagination_tests.cpp  sse_parser_tests.cpp  sync_fetch_tests.cpp  test_stubs.hpp
v1.0.0/: index.html
v1.1.0/: annotated.html  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_2b590c760c68083bf3992f50fd0724d5.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespaces.html
v1.1.1/: annotated.html  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_2b590c760c68083bf3992f50fd0724d5.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespaces.html
v2.0.0/: annotated.html  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespaces.html
v2.1.0/: annotated.html  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespaces.html
v2.2.0/: annotated.html  annotated_dup.js  classes.html  dir_1dfdaf2a20c264418d0279052f697d7b.html  dir_1dfdaf2a20c264418d0279052f697d7b.js  dir_790a3f79ffe4fafc5ddeae9696b6fe0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  navtreedata.js  pages.html
(+724 files in other folders)
